fix: horizontal scroll enabled and css fixes

--- a/public/css/karnataka_covid-public.css
+++ b/public/css/karnataka_covid-public.css
@@ -2,3 +2,23 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+#info-table tbody td,#aggregate-table tbody td{padding: 8px 10px; }
+#info-table thead th,#aggregate-table thead th{padding: 8px 10px; font-size: 16px; line-height: 32px; font-weight: 700;}
+
+  /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {} 
